# sfserialization

./: AUTHORS  Android.mk  CMakeLists.txt  COPYING  README  cmake_uninstall.cmake.in
sfautoreflect/: CMakeLists.txt  Configuration.cpp  Configuration.h  Preprocessor.cpp  Preprocessor.h  StructureParser.cpp  StructureParser.h  StructureTypes.cpp  StructureTypes.h  main.cpp
sfautoreflect/generators/: CppGeneratorBase.cpp  CppGeneratorBase.h  DumpGenerator.cpp  DumpGenerator.h  EnumGenerator.cpp  EnumGenerator.h  Generator.cpp  Generator.h  RpcGenerator.cpp  RpcGenerator.h  SerializationGenerator.cpp  SerializationGenerator.h  StaticHashTableBuilder.cpp  StaticHashTableBuilder.h
sfserialization/: CMakeLists.txt  Deserialization.cpp  Deserialization.h  JSONParser.cpp  JSONParser.h  Serialization.cpp  Serialization.h  autoreflect.h  isdefault.h  types.h  winsupport.h
testcases/: CMakeLists.txt  basics.cpp  compile_test.sh  json.cpp  performance.cpp  performance.h  reflect_enum.cpp  reflect_enum.h  reflect_rpc.cpp  reflect_rpc.h  reflect_struct.cpp  reflect_struct.h  sample.cpp  serialization.cpp  serialization_regression.cpp  test.h
